--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,10 @@ body {
   background-image: url("../img/specialty.png");
   background-size: cover;
   background-position: center;
-  overflow: hidden; }
+  overflow: hidden;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
   .footer__box {
     display: flex;
     justify-content: space-between;
@@ -421,22 +424,28 @@ body {
   .footer__img {
     width: 100%;
     height: 100%;
+    z-index: 1000;
     object-fit: cover;
-    border-radius: 4.66px; }
+    border-radius: 4.66px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; }
   .footer__item-left {
     position: absolute;
     background-color: #000000;
     width: 20%;
     height: 100%;
     right: 0;
-    border-radius: 0 4.66px 4.66px 0; }
+    border-radius: 0 4.66px 4.66px 0;
+    z-index: 1200; }
   .footer__item-right {
     position: absolute;
     background-color: #000000;
     width: 20%;
     height: 100%;
     left: 0;
-    border-radius: 4.66px 0 0 4.66px; }
+    border-radius: 4.66px 0 0 4.66px;
+    z-index: 1200; }
   .footer__item-text {
     position: relative;
     font-family: "Banny";
@@ -449,13 +458,19 @@ body {
       position: absolute;
       left: -1.5rem;
       top: 6rem;
-      transform: rotate(90deg); }
+      transform: rotate(90deg);
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none; }
     .footer__item-text--right {
       position: absolute;
       transform: rotate(-180deg);
       writing-mode: vertical-lr;
       left: 3rem;
-      bottom: 2rem; }
+      bottom: 2rem;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none; }
       @media only screen and (max-width: 37.5em) {
         .footer__item-text--right {
           left: 1.5rem; } }
@@ -870,6 +885,12 @@ body {
         line-height: 2rem;
         letter-spacing: .01rem;
         font-size: 1.4rem; } }
+    @media only screen and (max-width: 20em) {
+      .menu__text-one {
+        font-size: 1rem; } }
+    @media only screen and (max-width: 23.43em) {
+      .menu__text-one {
+        font-size: 1.2rem; } }
   .menu__text-two {
     color: #999999;
     font-size: 1.18rem;
