--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ body {
     max-width: 23rem;
     max-height: 23rem;
     background-color: rgba(0, 0, 0, 0);
-    z-index: 100;
+    z-index: 10000;
     border: 1.8rem solid #E8C300;
     border-radius: 4.66px;
     top: 50%;
@@ -505,6 +505,9 @@ body {
     transform: translate(-145%, -50%);
     opacity: 0;
     transition: all .5s; }
+    @media only screen and (max-width: 80em) {
+      .footer__square {
+        display: none; } }
   .footer__square-right {
     position: absolute;
     width: 23rem;
@@ -518,6 +521,9 @@ body {
     transform: translate(45%, -50%);
     opacity: 0;
     transition: all .5s; }
+    @media only screen and (max-width: 80em) {
+      .footer__square-right {
+        display: none; } }
 
 .header {
   width: 100%;
